--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <indokku-platform-root></indokku-platform-root>
+    <indev-root></indev-root>
   </body>
 </html>
